<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="11dp"
        android:layout_marginStart="11dp"
        android:layout_marginTop="13dp"
        android:text="Login"
        android:fontFamily="sans-serif-condensed"
        android:textSize="30sp"/>



    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tv_login"
        android:layout_alignStart="@+id/tv_login"
        android:layout_below="@+id/tv_login"
        android:layout_marginTop="80dp"
        android:fontFamily="monospace"
        android:text="Username"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_username"
        android:ems="17"
        android:layout_alignLeft="@+id/tv_username" />



    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/et_username"
        android:layout_alignStart="@+id/et_username"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="33dp"
        android:fontFamily="monospace"
        android:text="Password"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="17"
        android:layout_below="@+id/tv_password"
        android:layout_alignLeft="@+id/tv_password" />


    <Button
        android:id="@+id/btn_login"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_below="@id/et_password"
        android:layout_centerInParent="true"
        android:ems="12"
        android:layout_marginTop="30dp"
        android:text="Login"/>

</RelativeLayout>
